# uci-ge-finder

./: LICENSE  README.md
backend/: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  courses_service.py  extensions.py  main.py  routes.py  schemas.py
backend/app/routes/: __init__.py  ge_routes.py
backend_old/app/: __init__.py
backend_old/app/routes/: health_routes.py
frontend/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts  useCourses.ts
frontend/src/components/: BrowseView.tsx  CatBadge.tsx  CategorySelect.tsx  CompareBar.tsx  CompareView.tsx  CourseCard.tsx  CourseRow.tsx  CourseTable.tsx  Dashboard.tsx  DesktopTable.tsx  EmptyHero.tsx  FilterSheet.tsx  GESelector.tsx  Header.tsx  LoadMoreButton.tsx  MobileTabs.tsx  NoResults.tsx  SortSheet.tsx  ThemeToggle.tsx  UnitsPill.tsx  icons.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useMediaQuery.ts  useTheme.ts  useUrlState.ts
frontend/src/icons/: CheckIcon.tsx  ChevronDown.tsx  DarkModeToggle.tsx  SearchIcon.tsx  SortArrows.tsx
frontend/src/lib/: categories.ts  categoryApi.ts  filter.ts
frontend/src/services/: api.ts
frontend/src/types/: api.ts  course.ts
