[project]
name = "uci-ge-finder"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "aiocache[redis]>=0.12.3",
    "fastapi>=0.136.1",
    "gunicorn>=26.0.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "ujson>=5.12.1",
    "uvicorn>=0.46.0",
]
